2010-06-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Redirect error messages to stderr or log
	instead of writing them to stdout. Add --verbose flag. Add --nvt-dir
	flag. Check for openvassd binary in selftest. Reworked flow and
	command line parsing.

	* tools/openvas-nvt-sync.in: Make selftest work. Add --nvt-dir flag.
	Reworked flow and command line parsing.

2010-06-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-mkcert-client.in: Create the openvas users directory
	if installing the new user is requested and the directory does not
	exist.

2010-05-27  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* openvassd/ntp_11.c (files_add_translation): Adressed compiler
	warning, made content parameter not const (a reference is put in the
	hashtable, data might get manipulated or freed from somewhere else).

2010-05-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/ntp_11.c (files_add_size_translation): Removed stray debug
	message.

2010-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.1.0.rc2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.

2010-05-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.1.0.rc1 release.

	* VERSION: Set to 3.1.0.rc1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2010-05-19  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* README: Added hint that openvas-scanner is an evolution of
	openvas-server. Corrected dependency statement.

2010-05-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Adding risk_factor tags to CNVTs.

	* cnvts/find_service/find_service.c (plugin_init): Set risk_factor.

	* cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c (plugin_init): Set
	risk_factor.

	* cnvts/synscan/synscan.c (plugin_init): Set risk_factor.

2010-05-11  Michael Wiegand <michael.wiegand@greenbone.net>